# guided_projects

./: .gitignore  .gitmodules  README.md  environment_root.yml  kaggle_data_download.ipynb  requirements.txt
.metals/: metals.lock.db  metals.mv.db
.scala-build/: ide-inputs.json
.trunk/: trunk.yaml
EDA/: adult_report.html  kaggle_data_download.ipynb  ydata.ipynb
NLP/: README.md
NLP/ Fanilo_Andrianasolo/: README.md
NLP/Greg_Hog/: Your_First_NLP_Tutorial_in_Python_Spam_Classification.ipynb
NLP/Greg_Hogg/: Your_First_NLP_Tutorial_in_Python_Spam_Classification.ipynb
NLP/simple-python-chatbot/: README.md
Python/FastAPI/: main.py  models.py
Python/OOP/: item.py  main.py  test.py
Python/basics/: ticTacToe.py  tic_tac_toe.py
ansible/: ansible-project-steps.txt
ansible/aos-simple-project/: README.md  ansible-project-steps.txt  deply-techmax.yml
api/fast-api-mysql/: README.md  database.py  main.py  models.py  mysql.yml  pyproject.toml
classification/: README.md
classification/neuronetwork-from-scratch/: README.md  activation.py  activations.py  (+6 more)
data-engineering/airbyte/quickstarts/quickstarts/ecommerce_analytics_bigquery/: .pdm-python  pyproject.toml
data-engineering/airbyte/quickstarts/quickstarts/ecommerce_analytics_bigquery/dbt_project/: profiles.yml
data-engineering/airbyte/quickstarts/quickstarts/ecommerce_analytics_bigquery/dbt_project/models/sources/: faker_sources.yml
data-engineering/airbyte/quickstarts/quickstarts/ecommerce_analytics_bigquery/infra/airbyte/: .terraform.lock.hcl  variables.tf
data-engineering/airbyte/quickstarts/quickstarts/ecommerce_analytics_bigquery/orchestration/orchestration/: assets.py
ensamble/datacamp/: ensamble.ipynb  pyproject.toml  requirements.txt
miscellaneous/: README.md
ml-deployment/fast-api/: pyproject.toml  requirements.txt
ml-deployment/fast-api/src/api/: BankNotes.py  ModelTraining.ipynb  app.py  classifier.pkl  main.py
ml-deployment/fast-api/src/api/templates/: custom_swagger_ui.html
time_series/: Anomaly_Detection_in_ECG_Signals.ipynb  LSTM_Time_Series_Forecasting_Tutorial_in_Python.ipynb  introduction_to_series_forecasting.ipynb
visualizations/: README.md
xgboost/: 10-monitor-performance-early-stopping.ipynb  100-xgboost-template.ipynb  11-multithreading.ipynb  4-first-xgboost.ipynb  5-prep-for-gradient-boosting.ipynb  6-evaluate-xgboost.ipynb  7-visualize-trees.ipynb  8-save-and-load-models.ipynb  9-feature-importance-and-selection.ipynb  README.md  pyproject.toml
xgboost/time-series/rob-mulla/: pt2-time-series-forecasting-with-xgboost.ipynb  time-series-forecasting-with-machine-learning-yt.ipynb  time-series-forecasting-with-xgboost.ipynb
(+75 files in other folders)
