[project]
name = "fast-api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "gregorywmorris", email = "gwm1980@gmail.com"},
]
dependencies = [
    "numpy>=2.0.0",
    "scipy>=1.13.1",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.9.0",
    "pandas>=2.2.2",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "gunicorn>=22.0.0",
    "uvloop>=0.19.0",
    "httptools>=0.6.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
